src/ui/ProcessContent.css
.processContent {
    position: relative;
    overflow: hidden;
    min-height: 10em;
    background-color: #fafafa;
}

.processContent__canvas {
    pointer-events: none;
    touch-action: none;
    user-select: none;
    z-index: 1;
}

.processContent__scrollWrapper {
    overflow: auto;
}

.processContent__canvas, .processContent__scrollWrapper {
    position: absolute;
    top: 0; left: 0;
    bottom: 0; right: 0;
}

.processContent__backgroundScroll {
    background-image: url('grid.png');
    z-index: 0;
}

.processContent__scrollRoot {
    z-index: 2;
}

.processContent__backgroundScroll, .processContent__scrollRoot {
    position: absolute;
    top: 0; left: 0;
}

